fix: collapse (#94)

--- a/source/css/scss/_collapse.scss
+++ b/source/css/scss/_collapse.scss
@@ -23,6 +23,7 @@
     a,
     button {
       background: transparent;
+      text-decoration: none;
       border: none;
       color: $headings-color;
       cursor: pointer;
